@@ -16,6 +16,8 @@ Bugfixes:
   * A link from a topic page to itself should be formatted as plain bold text,
     not as a link.  Reported by floatingworld.
   * XML imports of redirect topics were not redirecting properly.
+  * Leading whitespace should be trimmed from category names such as
+    "Category: Test" or "Category : Test".
 
 Translation Updates:
 
